--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,11 @@
                 <label>SMA Slow <input type='text' name='sma_slow' value="100"> days</label>
             </td>
         </tr>
+        <tr>
+            <td>
+                <label><input type='checkbox' name='filter' value='investor_reco' checked> Investor Reco (finviz.com). Takes a long time</label>
+            </td>
+        </tr>
     </table>
     <input type="submit" value="Refresh Filters">
 {#    onclick="window.location.href='/filter';" />#}
@@ -108,6 +113,7 @@
         <th>Company</th>
         <th>Bull Candle Signal</th>
         <th>Bear Candle Signal</th>
+        <th>Investor's Reco</th>
     </tr>
     {% for symbol in stocks %}
     <tr>
@@ -117,7 +123,7 @@
                onmouseout="document.getElementById('place-holder-1').src='https://linkpeek.com/theme/img/linkpeek-transparent-pixel-placeholder.png';">
                 {{ symbol }}
                 <img src="https://linkpeek.com/theme/img/linkpeek-transparent-pixel-placeholder.png"
-                     id="place-holder-1" style="zindex: 100; position: absolute;"  alt=""/>
+                     id="place-holder-1" style="zindex: 100; position: relative;"  alt=""/>
             </a>
         </td>
         <td>
@@ -129,6 +135,9 @@
         </td>
         <td class="bearish">
             {{ stocks[symbol]['cdl_sum_ber']  | replace(", ", "<br/>") }}
+        </td>
+        <td class="investor_sum">
+            {{ stocks[symbol]['investor_sum'] }}
         </td>
         {% endautoescape %}
 
