--- a/templates/index.html
+++ b/templates/index.html
@@ -85,8 +85,8 @@
             </td>
         </tr>
         <tr>
-            <td>
-                <label><input type='checkbox' name='filter' value='investor_reco' checked> Investor Reco (finviz.com). Takes a long time</label>
+            <td colspan="2">
+                <label><input type='checkbox' name='filter' value='investor_reco'> Investor Reco (finviz.com). Takes a long time</label>
             </td>
         </tr>
     </table>
