Formatting updates, number inbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                 <label><input type='checkbox' name='filter' value='consolidating'> Consolidating</label>
             </td>
             <td>
-                <label>Consolidating within <input type='text' name='consolidating_pct' value="2" size="5">%</label>
+                <label>Consolidating within <input type='number' name='consolidating_pct' value="2" style="width: 50px">%</label>
             </td>
         </tr>
         <tr>
@@ -71,7 +71,7 @@
                 <label><input type='checkbox' name='filter' value='breakout'> Breakout</label>
             </td>
             <td>
-                <label>Breakout over <input type='text' name='breakout_pct' value="2.5" size="5">%</label>
+                <label>Breakout over <input type='number' name='breakout_pct' value="2.5" style="width: 50px">%</label>
             </td>
         </tr>
         <tr>
@@ -89,8 +89,8 @@
                 <label><input type='checkbox' name='filter' value='sma_filter'> SMA Fast above Slow</label>
             </td>
             <td>
-                <label>SMA Fast <input type='text' name='sma_fast' value="25" size="5"> days</label><br>
-                <label>SMA Slow <input type='text' name='sma_slow' value="50" size="5"> days</label>
+                <label>SMA Fast <input type='number' name='sma_fast' value="25" style="width: 50px"> days</label><br>
+                <label>SMA Slow <input type='number' name='sma_slow' value="50" style="width: 50px"> days</label>
             </td>
         </tr>
         <tr>
