added filters for EMA and TTM (still in the squeeze)
now can screen for stocks still in the squeeze and check if EMAs are stacked as leading indicator of breakout plus a check of closing price vs. ema21. Updated snapshot to download 180 days of history

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,17 @@
         </tr>
         <tr>
             <td>
-                <label><input type='checkbox' name='filter' value='ttm_squeeze' {% if active_filters['ttm_squeeze']['go'] == True %}checked{% endif %}> TTM Squeeze</label>
+                <label><input type='checkbox' name='filter' value='ttm_squeeze' {% if active_filters['ttm_squeeze']['go'] == True %}checked{% endif %}> TTM Squeeze (Coming out of Squeeze)</label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label><input type='checkbox' name='filter' value='in_the_squeeze' {% if active_filters['in_the_squeeze']['go'] == True %}checked{% endif %}> TTM Squeeze (In the Squeeze)</label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label><input type='checkbox' name='filter' value='ema_stacked' {% if active_filters['ema_stacked']['go'] == True %}checked{% endif %}> EMA positively Stacked</label>
             </td>
         </tr>
         <tr>
