--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Fundamental  -->
     <meta charset="UTF-8">
-    <title>Stock Detail</title>
+    <title>Financial Analysis</title>
     <meta name="description" content>
     <meta name="author" content>
     <!-- Mobile needs  -->
