--- a/templates/stock_detail.html
+++ b/templates/stock_detail.html
@@ -1,6 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>{{ stock.symbol }} >> {{ stock.security }}</h1>
+<h1>
+    <div class="ui massive breadcrumb">
+        <a href="/" class="section">Technical Scanner</a>
+        <i class="angle double right icon"></i>
+        <div class="active section">{{ stock.security }} ({{ stock.symbol }})</div>
+    </div>
+</h1>
 <table class="ui compact table">
     <thead>
         <tr>
@@ -13,10 +19,10 @@
         </tr>
     </thead>
     <tbody>
-        {% for x, bar in stock['bars'] %}
+        {% for i, bar in stock['bars'].items() %}
         <tr>
-{#            <td>{{ bar.index }}</td>#}
-            <td>{{ x }}</td>
+            <td>{{ bar.Date }}</td>
+            <td>{{ bar.Open }}</td>
             <td>{{ bar.High }}</td>
             <td>{{ bar.Low }}</td>
             <td>{{ bar.Close }}</td>
