--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,22 +38,12 @@
         }
 
         .bullish {
-            background: green;
+            background: #016936;
             color: white;
         }
 
         .bearish {
-            background: red;
-            color: white;
-        }
-
-        .consolidating {
-            background: green;
-            color: white;
-        }
-
-        .breakout {
-            background: green;
+            background: #B03060;
             color: white;
         }
     </style>
