re-enabled the refresh data button

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {#    <input type="button" onclick="window.location.href='/snapshot';" value="Refresh Data"/>#}
 {#    Last update: {{ data_last_modified }}#}
 {#    <br>#}
-    <div class="ui labeled button" tabindex="0">
+    <div class="ui labeled button" tabindex="0" onclick="window.location.href='/snapshot';">
       <div class="ui button">
         <i class="download icon"></i> Refresh data
       </div>
