formatting sma_filter, minor tweak to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
             <td>
-                <input id="breakout" type='checkbox' name='filter' value='breakout'
+                <input id="breakout" type="checkbox" name="filter" value="breakout"
                        {% if active_filters['breakout']['go'] == True %}checked{% endif %}>
                 <label for="breakout"> Breakout over </label>
                 <input id="breakout_pct" type="number" name="breakout_pct"
